<resources>
    <string name="app_name">Svaggy</string>
    <string name="google_maps_key_old" translatable="false">AIzaSyA3I3BbBKg8dFXAcbJJYJu872jPaLGNcgs</string>
    <string name="google_maps_key">AIzaSyBKR4lYvqlS4Trdv5br2kyNPTXjofnKcS8</string>
    <string name="stripe_payment_key">pk_test_51OaC7cSBeAIOIRJFIhBkaO4mDTRI7jVxO0v24A8YHINsOdN5rtiElwjr9eZfLzCXYm75OWfPZsFNYMDu863N5ztV000lhBKWMm</string>
    <string name="getczx50">Get CZK 500</string>
    <string name="boading_msg">Get an instant CZK 500 promo coupon after registering with us.</string>
    <string name="select_combo">Select Combos</string>
    <string name="boading_sec_msg">Discover endless flavors by selecting your perfect food combo.</string>
    <string name="compare_prices">Compare Prices</string>
    <string name="boding_thrd_msg">Find the best deals and compare food prices with ease on our app!</string>
    <string name="swiftdelivery">Swift Delivery</string>
    <string name="trackorder">Track Order</string>
    <string name="wlcom_msg">We are available in</string>
    <string name="login_acc">Log in to your account</string>
    <string name="login_txt">LOGIN</string>
    <string name="cntry_name_code">%1$s +%2$s</string>
    <string name="cntry_phn_code">+%s</string>
    <string name="went_wrong">Something went wrong.</string>
    <string name="select_country">Select Country</string>
    <string name="search">Search</string>
    <string name="no_result_found">No result found</string>
    <string name="have_acc_msg">Don’t Have An Account?</string>
    <string name="otp_msg_phone">Type the verification code \nwe’ve sent you on your mobile number</string>
    <string name="otp_msg_email">Type the verification code \nwe’ve sent you on your email address</string>
    <string name="otp_received">Didn’t receive code?</string>
    <string name="resend_again">Resend now</string>
    <string name="siup_txt">Sign Up</string>
    <string name="forgot_passtxt">Forgot Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="register_msg">Let’s create your account!</string>
    <string name="login">Log In</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="prefrence_msg">Choose the type of food you like to eat\n(Minimum One)</string>
    <string name="seafood_txt">Seafood</string>
    <string name="chicken_txt">Chicken</string>
    <string name="fish_txt">Fish</string>
    <string name="pork_txt">Pork</string>
    <string name="low_foodmap_txt">Low Foodmap</string>
    <string name="sides_txt">Sides</string>
    <string name="vegetarian_txt">Vegetarian</string>
    <string name="halal_txt">Halal</string>
    <string name="vegan_txt">Vegan</string>
    <string name="whole_txt">Whole 30</string>
    <string name="keto_txt">Keto</string>
    <string name="glutenfree_txt">Gluten Free</string>
    <string name="fruits_txt">Fruits</string>
    <string name="beef_txt">Beef</string>
    <string name="location_name">6391 Elgin St. Celina</string>
    <string name="home_msg">What’s on your mind?</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="special_offers_txt">Special Offers Near You</string>
    <string name="view_all">View All</string>
    <string name="fifty_explore">50 Restaurants to Explore</string>
    <string name="all_restaurants_image">All Restaurants</string>
    <string name="rating_star">Rating Star</string>
    <string name="hori_line">hori line</string>
    <string name="combo_layout">Combo Layout</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="indicator_image">Indicator Image</string>
    <string name="search_food">Search Food or Restaurants</string>
    <string name="search_for_dish">Search for dishes</string>
    <string name="notification">Notification</string>
    <string name="arrow_down">Arrow Down</string>
    <string name="location">Location</string>
    <string name="search_icon">Search Icon</string>
    <string name="svaggy">Svaggy</string>
    <string name="svaggy_food">Svaggy Food</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="phone_number">Mobile Number</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="google_login">Google Login</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_txt">CONTINUE</string>
    <string name="or">or</string>
    <string name="log_in_signup">Log in or Sign up</string>
    <string name="agree_tc_msg">By continuing, you agree to our</string>
    <string name="terms_service">Terms of service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="content_policies">Content Policies</string>
    <string name="search_location">Search Location</string>
    <string name="send_otp">Send Verification Code</string>
    <string name="zero_txt">0</string>
    <string name="country_name_and_code">%1$s (%2$s)</string>
    <string name="plus">+</string>
    <string name="detect_current_location">Set Current Location</string>
    <string name="preferences_txt">Preferences</string>
    <string name="otp_send_successful">Otp Send Successful</string>
    <string name="save_location">Save Location</string>
    <string name="select_delivery_location">Select delivery location</string>
    <string name="change">Change</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="food_is_being_prepared">Your food is being prepared, you cannot cancel this order. If you want to cancel, contact us below.</string>
    <string name="Choose_Language">Choose Language</string>
    <string name="selected_item">Selected item:</string>
    <string-array name="CzechRepublicCities">
        <item>Prague</item>
        <item>Brno</item>
        <item>Ostrava</item>
        <item>Plzeň</item>
        <item>Liberec</item>
        <item>Olomouc</item>
        <item>České Budějovice</item>
        <item>Hradec Králové</item>
        <item>Pardubice</item>
        <item>Ústí nad Labem</item>
        <item>Zlín</item>
        <item>Havířov</item>
        <item>Kladno</item>
        <item>Most</item>
        <item>Opava</item>
        <item>Frýdek-Místek</item>
        <item>Jihlava</item>
        <item>Teplice</item>
        <item>Karviná</item>
        <item>Karlovy Vary</item>
        <item>Děčín</item>
        <item>Chomutov</item>
        <item>Jablonec nad Nisou</item>
        <item>Mladá Boleslav</item>
        <item>Prostějov</item>
        <item>Přerov</item>
        <item>Třinec</item>
    </string-array>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="select_delivery_date_and_time">Delivery Time</string>
    <string name="offers_and_benefits">Offers and Benefits</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="address_select_msg">Where would you like to deliver this order?</string>
    <string name="add_or_select_address">  Add or Select Address</string>
    <string name="bill_details">Bill Details</string>
    <string name="select_delivery_date">Select Delivery Date</string>
    <string name="item_total">Item Total</string>
    <string name="delivery_fee_5_7_kms">Delivery Fee | 5.7 Kms</string>
    <string name="tax_15">Tax 15%</string>
    <string name="czk_10_00">CZK 10.00</string>
    <string name="total">Total</string>
    <string name="add_funds">Add Funds</string>
    <string name="add_more_items">Add More Items</string>
    <string name="add_cooking_instructions">Add Cooking Instructions</string>
    <string name="add_new_address">Add New Address</string>
    <string name="select_an_address">Select an Address</string>
    <string name="select_date">Select Date</string>
    <string name="order_content">Order Content</string>
    <string name="order_delete_content">You have items in your cart from another Restaurant. Clear your cart to add new items?</string>
    <string name="select_time_slot">Select Time Slot</string>
    <string name="select_time">Select Time</string>
    <string name="credit_debit_cards"><![CDATA[Credit & Debit Cards]]></string>
    <string name="add_new_card">Add New Card</string>
    <string name="available_coupons">Available Coupons</string>
    <string name="space_line">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</string>
    <string name="coupon_savings"> coupon savings</string>
    <string name="expiry">Expiry Date</string>
    <string name="cvv">CVV</string>
    <string name="name_on_card">Nickname</string>
    <string name="save_details">Save Details</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="order_details">Order Details</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="web_client_id">21262124450-bk4aq21nq1q6sg8ubebq0kj0g4q5eij3.apps.googleusercontent.com</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="my_wallet">My Wallet</string>
    <string name="settings">Settings</string>
    <string name="setting">Setting</string>
    <string name="help">Help</string>
    <string name="save_changes">Save Changes</string>
    <string name="menu">Menu</string>
    <string name="sort_by">Sort By</string>
    <string name="nearest">Nearest</string>
    <string name="greatOffers">Great Offers</string>
    <string name="featured">Featured</string>
    <string name="veg"> Veg</string>
    <string name="non_veg">Meat</string>
    <string name="end_timer_value">00:00</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_code">Resend code</string>
    <string name="delivering_anything_anytime">Order. Eat. Repeat.</string>
    <string name="sample_text">abc</string>
    <string name="cancel_image">Cancel Image</string>
    <string name="confirm">Confirm</string>
    <string name="curency">CZK</string>
    <string name="curency_name">CZK&#160;</string>
    <string name="stringAdd"> %1$s</string>
    <string name="curencyWith">CZK %s</string>
    <string name="curencyName">CZK </string>
    <string name="choose_a_location">Choose a Location</string>
    <string name="search_in_restaurant"><![CDATA[Search in Anchor & James]]></string>
    <string name="cancel">Cancel</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="edit">Edit</string>
    <string name="money_added_successfully">Money Added Successfully</string>
    <string name="add_new_payment_method">Add New Payment Method</string>
    <string name="account">Account</string>
    <string name="contact_us_now">Contact Us Now</string>
    <string name="top_rated">Top Rated</string>
    <string name="text_restaurant_closed">Uh-oh! Outlet is currently closed till 10:00 AM tomorrow. You can pre order for later.</string>
    <string name="priceRtn"> %1$s</string>
    <string name="order_txt">Orders</string>
    <string name="today_txt">Today</string>
    <string name="today_small">Today</string>
    <string name="upcoming_txt">Upcoming</string>
    <string name="delivered_txt">Delivered</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
</resources>