<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/arrow_back"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginBottom="@dimen/dp20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        style="@style/textViewBlack18SpBold"
        android:layout_marginStart="@dimen/dp10"
        app:layout_constraintBottom_toBottomOf="@+id/backButton"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/backButton" />

    <TextView
        android:id="@+id/txtFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="@dimen/sp16"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        android:textColor="@color/txt_black"
        android:fontFamily="@font/jostregular"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/dp24"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/edtFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_black"
        android:padding="@dimen/_12sdp"
        android:hint="@string/enter_first_name"
        android:paddingBottom="@dimen/dp8"
        android:layout_marginTop="@dimen/dp8"
        android:layout_marginEnd="@dimen/dp24"
        android:textColor="@color/txt_gray"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtFirstName"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstName" />

    <TextView
        android:id="@+id/txtLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jostregular"
        android:text="@string/last_name"
        android:layout_marginTop="@dimen/dp20"
        android:textColor="@color/txt_black"
        android:textSize="@dimen/sp16"
        app:layout_constraintStart_toStartOf="@+id/edtFirstName"
        app:layout_constraintTop_toBottomOf="@+id/edtFirstName" />

    <EditText
        android:id="@+id/edtLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_black"
        android:padding="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/dp24"
        android:hint="@string/enter_last_name"
        android:layout_marginTop="@dimen/dp8"
        android:textColor="@color/txt_gray"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtFirstName"
        app:layout_constraintTop_toBottomOf="@+id/txtLastName" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:fontFamily="@font/jostregular"
        android:textColor="@color/txt_black"
        android:textSize="@dimen/sp16"
        android:layout_marginTop="@dimen/dp20"
        app:layout_constraintStart_toStartOf="@+id/edtLastName"
        app:layout_constraintTop_toBottomOf="@+id/edtLastName" />

    <TextView
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_black"
        android:padding="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/dp24"
        android:layout_marginTop="@dimen/dp8"
        android:textColor="@color/txt_gray"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtFirstName"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        android:hint="@string/enter_email_address"
        android:autofillHints="@string/enter_email_address" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        style="@style/textViewPrimary14Spmedium"
        android:layout_marginEnd="@dimen/_12sdp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="@+id/edtEmail"
        app:layout_constraintBottom_toBottomOf="@+id/edtEmail"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail"/>

    <TextView
        android:id="@+id/txtMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jostregular"
        android:text="@string/mobile_number"
        android:textColor="@color/txt_black"
        android:layout_marginTop="@dimen/dp20"
        android:textSize="@dimen/sp16"
        app:layout_constraintStart_toStartOf="@+id/edtLastName"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <TextView
        android:id="@+id/edtMobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_black"
        android:padding="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/dp24"
        android:hint="@string/enter_mobile_number"
        android:layout_marginTop="@dimen/dp8"
        android:textColor="@color/txt_gray"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtFirstName"
        app:layout_constraintTop_toBottomOf="@+id/txtMobile" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        style="@style/textViewPrimary14Spmedium"
        android:layout_marginEnd="@dimen/_12sdp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="@+id/edtMobile"
        app:layout_constraintBottom_toBottomOf="@+id/edtMobile"
        app:layout_constraintEnd_toEndOf="@+id/edtMobile"/>


    <TextView
        android:id="@+id/btnSaveChange"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_24sdp"
        android:background="@drawable/continue_bt"
        android:fontFamily="@font/jostbold"
        android:gravity="center"
        android:text="@string/save_changes"
        android:layout_marginTop="@dimen/dp30"
        android:textAlignment="center"
        android:textColor="@color/txt_white"
        android:textSize="@dimen/sp16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
