<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.screens.login.LoginEmailSecondScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/svaggy_text"
        android:layout_marginTop="@dimen/dp40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/svaggy" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="@dimen/_165sdp"
        android:scaleType="fitXY"
        android:src="@drawable/welcomefood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        android:contentDescription="@string/svaggy_food" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/white_curve_twoside"
            android:elevation="@dimen/dp20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/divider2">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp24"
                android:layout_marginTop="@dimen/dp25"
                android:fontFamily="@font/jostbold"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textSize="@dimen/_24ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp8"
                android:fontFamily="@font/jostregular"
                android:text="@string/login_acc"
                android:textColor="@color/txt_gray"
                android:textSize="@dimen/sp16"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/login_bt"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/dp24"
                android:layout_marginTop="@dimen/dp25"
                android:layout_marginEnd="@dimen/dp24"
                android:background="@drawable/continue_bt"
                android:fontFamily="@font/jostbold"
                android:gravity="center"
                android:text="@string/login_txt"
                android:textAlignment="center"
                android:textColor="@color/txt_white"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/for_pass_bt" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp25"
                android:fontFamily="@font/jostregular"
                android:text="@string/email"
                android:textColor="@color/txt_black"
                android:textSize="@dimen/sp16"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <EditText
                android:id="@+id/enter_email_et"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/dp24"
                android:autofillHints="emailAddress"
                android:background="@drawable/radius_black"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_12sdp"
                android:paddingTop="@dimen/dp8"
                android:paddingEnd="@dimen/_12sdp"
                android:paddingBottom="@dimen/dp8"
                android:textColor="@color/txt_gray"
                android:textColorHint="@color/txt_gray"
                android:textSize="@dimen/sp14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:fontFamily="@font/jostregular"
                android:text="@string/password"
                android:textColor="@color/txt_black"
                android:textSize="@dimen/sp16"
                app:layout_constraintStart_toStartOf="@+id/enter_email_et"
                app:layout_constraintTop_toBottomOf="@+id/enter_email_et" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="0dp"
                android:layout_height="@dimen/_48sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/dp24"
                android:autofillHints="password"
                android:background="@drawable/radius_black"
                android:drawableEnd="@drawable/pass_show"
                android:hint="@string/enter_password"
                android:inputType="textEmailAddress"
                android:paddingStart="@dimen/_12sdp"
                android:paddingTop="@dimen/_8sdp"
                android:paddingEnd="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textColor="@color/txt_gray"
                android:textColorHint="@color/txt_gray"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/enter_email_et"
                app:layout_constraintTop_toBottomOf="@+id/textView16" />

            <TextView
                android:id="@+id/for_pass_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp12"
                android:fontFamily="@font/jostregular"
                android:paddingStart="@dimen/dp8"
                android:paddingTop="@dimen/dp5"
                android:paddingEnd="@dimen/dp8"
                android:paddingBottom="@dimen/_4sdp"
                android:text="@string/forgot_passtxt"
                android:textColor="@color/primaryColor"
                android:textSize="@dimen/sp12"
                app:layout_constraintEnd_toEndOf="@+id/editTextText2"
                app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp24"
                app:layout_constraintBottom_toTopOf="@+id/imageView8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_bt">


                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jostregular"
                    android:text="@string/have_acc_msg"
                    android:textColor="@color/txt_gray"
                    android:textSize="@dimen/sp16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/sign_up_bt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/sign_up_bt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/jostregular"
                    android:text="@string/siup_txt"
                    android:textColor="@color/primaryColor"
                    android:textSize="@dimen/sp16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView7"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_60sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:contentDescription="@string/indicator_image"
                android:elevation="@dimen/dp20"
                android:src="@drawable/home_indicator_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>